# openstack-flavor-management

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
flavormanager/: flavor_mapper.py  main.py
