[metadata]
name = openstack-flavor-management
summary = Application to declaratively setup and maintain nova flavors
description-file =
    README.rst
author = Graham Hayes
author-email = gr@ham.ie
home-page = https://github.com/grahamhayes/openstack-flavor-management
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    flavormanager

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[entry_points]
console_scripts =
    flavor-manager = flavormanager.main:main
flavormanager.cmds =
    simple = cliffdemo.simple:Simple
